# projet_equipe-6

./: .gitignore  Airfoil.py  ConditionVol.py  LICENSE.md  Pyproject.toml  README.md  VolOpenSkyAsync.py  aerodynamique.py  app.py  gestion_base.py  interaction_graphique.py  main.py  pyproject.toml  requirements.txt  weather_api.py
EXEMPLE/: Exmple.md
EXMPLE/: Exmple.md
docs/source/: conf.py  index.rst  interaction_graphique.rst
projet_sessionE2025/BaseDonnees/: gestion_base.py
projet_sessionE2025/aero/: aerodynamique.py
projet_sessionE2025/airfoil/: Airfoil.py
source/: Airfoil.rst  ConditionVol.rst  VolOpenSkyAsync.rst  conf.py  gestion_base.rst  modules.rst
src/projet_sessionE2025/: __init__.py  app.py  main.py
src/projet_sessionE2025/BaseDonnees/: gestion_base.py
src/projet_sessionE2025/aero/: aerodynamique.py
src/projet_sessionE2025/airfoil/: Airfoil.py
src/projet_sessionE2025/donnees_vol/: ConditionVol.py  VolOpenSkyAsync.py
